# tattler

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/: stdafx.h
include/common/: capture_serialization.h  capture_types.h  pipe_protocol.h
include/hook/: capture_buffer.h  capture_controller.h  cmdlist_hooks.h  device_hooks.h  hook_state.h  pipe_client.h  queue_hooks.h  swapchain_hooks.h  timestamp_manager.h  vtable_hooks.h  vtable_slots.h
include/viewer/: capture_client.h  d3d12_renderer.h  d3dx12.h  frame_tree_panel.h  gpu_timeline_bar.h  pipe_server.h  process_launcher.h  srv_descriptor_allocator.h  style.h  texture_cache.h  texture_preview_panel.h  viewer_app.h
src/common/: capture_serialization.cpp
src/hook/: capture_buffer.cpp  capture_controller.cpp  cmdlist_hooks.cpp  device_hooks.cpp  dllmain.cpp  hook_state.cpp  queue_hooks.cpp  swapchain_hooks.cpp  timestamp_manager.cpp
src/viewer/: capture_client.cpp  d3d12_renderer.cpp  frame_tree_panel.cpp  gpu_timeline_bar.cpp  main.cpp  process_launcher.cpp  style.cpp  texture_cache.cpp  texture_preview_panel.cpp  viewer_app.cpp
tests/: test_pipe.cpp  test_serialization.cpp
